created new css file and added some contents

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<html>
-    <body>
-        <h1>Hello, VS code!</h1>
-        
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Web Page</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to CSS -->
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+    <p>This is a simple HTML and CSS project.</p>
+    <h2>This is a project to Kickstart my HTML journey</h2>
+</body>
 </html>
