--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Welcome to My Website</h1>
     <p>This is a simple HTML and CSS project.</p>
     <h2>This is a project to Kickstart my HTML journey</h2>
+    <img src="images/BeautifulPictureopfMukhtar.jpg" alt="my first photo" width="300">
 </body>
 </html>
